--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,9 @@ a {
 @media (max-width: 720px) {
   .press .section-container .section-info {
     margin-top: 100px;
-    height: calc(100vh - 125px);
+    height: 100vh;
+    height: -webkit-fill-available;
+    padding-bottom: 25px;
   }
 
   .press .section-container .section-info .press-grid {
